<resources>
    <string name="app_name">OnlineTaskManager</string>
    <string name="login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="register_link_text">New to Online Task Manager? Register here</string>
    <string name="login_divider_text">----------------------- Or -----------------------</string>
    <string name="NotesMainTitle">Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="NotesTitle">Title</string>
    <string name="note">Note</string>
    <string name="TitleEmpty">Please provide note title</string>
    <string name="ContentEmpty">Please provide note content</string>
    <string name="SetDeadline">Set Task Deadline :</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="CreationSuccess">Note saved</string>
    <string name="profile_text">Profile</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="back_login_text">Return to sign in</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="reset_password_instruction_text">Please enter your registered email to receive password reset link</string>

</resources>