<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#9F9AE7"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forgotPasswordScrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:clickable="false"
        android:fontFamily="@font/bad_script"
        android:text="@string/reset_password_text"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotPasswordInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:fontFamily="@font/bad_script"
        android:text="@string/reset_password_instruction_text"
        android:textColor="#000000"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fstTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bad_script"
        android:text="@string/email_text"
        android:textColor="#000000" />

    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/txtPasswordResetEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:ems="15"/>

    <Button
        android:id="@+id/btnResetPassword"
        android:backgroundTint="#7671DE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:text="@string/reset_password_text" />

    <TextView android:id="@+id/lnkBackSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/bad_script"
        android:text="@string/back_login_text"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#3F51B5"/>

</LinearLayout>